Add SFX toggle + placement and tetris sounds (web)

--- a/tetris_web/index.html
+++ b/tetris_web/index.html
@@ -13,6 +13,10 @@
       <div><span class="label">Score</span> <span id="score">0</span></div>
       <div><span class="label">Lines</span> <span id="lines">0</span></div>
       <div><span class="label">Level</span> <span id="level">1</span></div>
+      <button id="btnSfx" class="sfx" type="button" aria-pressed="true" title="Toggle sound effects">
+        <span class="sfxLabel">SFX</span>
+        <span id="sfxState" class="sfxState">On</span>
+      </button>
     </div>
   </header>
 
